add  GOV.UK / WAI convention in existing page

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 
-<head>
+<head role="banner">
   <meta charset="utf-8">
   <title>PortfolioApp</title>
   <base href="/">
