--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 
 <head role="banner">
   <meta charset="utf-8">
-  <title>PortfolioApp</title>
+  <title i18n="index.title|Document title@@indexTitle">PortfolioApp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
